tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.diagnostic
diagnostic error code=P0001 family=parser message="unterminated function body" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari" bytes=31
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari" line=3 column=1 end_line=3 end_column=1 byte_start=31 byte_end=31 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari:3:1\n   |\n 3 | \n   | ^"
